Fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 html, body {
 	margin: 0;
 	height: 100%;
-	overflow: hidden
+	overflow: hidden;
+	overflow-x: hidden;
+}
+
+body {
+	position: relative;
 }
 
 .all {
